# DFT

./: README.md  TODO.md
DFT_root/: CMakeLists.txt  DFTConfig.cmake.in
DFT_root/include/: Space1D.hpp  Space1D.ipp  utils.h  utils.hpp  utils.ipp
DFT_root/include/Space1D/: Observables.h  Orbitals.h  Potentials.hpp  Potentials.ipp  SCF.h
DFT_root/include/Space1D/Orbitals/: Initial.hpp
DFT_root/src/Space1D/: Space1D.cpp
DFT_root/src/Space1D/Observables/: Observables.cpp
DFT_root/src/Space1D/Orbitals/: Orbitals.cpp
DFT_root/src/Space1D/Orbitals/Initial/: Initial.cpp
DFT_root/src/Space1D/Potentials/: Potentials.cpp
DFT_root/src/Space1D/SCF/: SCF.cpp
DFT_root/src/utils/: utils.cpp
example/: CMakeLists.txt  example.cpp
source/: CMakeLists.txt  DFTConfig.cmake
source/Space1D/: CMakeLists.txt  Space1D.cpp  Space1D.h
source/Space1D/Observables/: CMakeLists.txt  Observables.cpp
source/Space1D/Orbitals/: CMakeLists.txt  Orbitals.cpp
source/Space1D/Orbitals/Initial/: CMakeLists.txt  Initial.cpp  Initial.h
source/Space1D/Potentials/: CMakeLists.txt  Potentials.cpp  Potentials.h
source/Space1D/SCF/: CMakeLists.txt  SCF.cpp
source/utils/: CMakeLists.txt  utils.cpp  utils.h
